DO NOT REVIEW StartServer/LocatorCommand adds exports
Co-authored-by: Dale Emery <demery@vmware.com>
Co-authored-by: Kirk Lund <klund@apache.org>